syntax = "proto3";
option java_multiple_files = true;
package br.ufu.sd.work.server.chord;

message ChannelNode {
    string ip = 1;
    int32 port = 2;
}

message ChordNode {
    int64 nodeId = 1;
    int64 minId = 2;
    int64 maxId = 3;
    string ip = 4;
    int32 port = 5;
    bool firstNode = 6;
    bool lastNode = 8;
    ChannelNode nextNodeChannel = 9;
    ChannelNode previousNodeChannel = 10;
}

service ChordService {
    rpc heyListen (ChordNode) returns (ChannelNode);
}
